--- a/emergency/css/style.css
+++ b/emergency/css/style.css
@@ -62,6 +62,12 @@ body{
 .navbar-default .navbar-form {
   border-color: #ecf0f1;
 }
+
+.container {
+  background-color: #f4f4f4 !important;
+}
+
+
 .navbar-default .navbar-link {
   color: #ecf0f1;
 }
@@ -82,6 +88,11 @@ body{
   color:#ffffff;
   padding-bottom: 10px;
   margin-bottom: 15px;
+}
+
+#header .container .row{
+  background:#333333;
+  
 }
 
 #header .create{
@@ -122,7 +133,7 @@ a.list-group-item:focus, a.list-group-item:hover, button.list-group-item:focus, 
   color:#ffffff;
   text-align:center;
   padding:30px;
-  margin-top:120px;
+  margin-top:30px;
 }
 
 
