--- a/paramrdic/css/style.css
+++ b/paramrdic/css/style.css
@@ -62,6 +62,12 @@ body{
 .navbar-default .navbar-form {
   border-color: #ecf0f1;
 }
+
+.container {
+  background-color: #f4f4f4 !important;
+}
+
+
 .navbar-default .navbar-link {
   color: #ecf0f1;
 }
@@ -82,6 +88,11 @@ body{
   color:#ffffff;
   padding-bottom: 10px;
   margin-bottom: 15px;
+}
+
+#header .container .row{
+  background:#333333;
+  
 }
 
 #header .create{
